--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -237,12 +237,18 @@
     margin-bottom: 3em;
     width: 70%;
     text-align: center;
+
+    @include tablet {
+        width: 60%;
+
+    }
+
+    @include desktop {
+        width: 50%;
+    }
 }
 
 .showcase-categories {
-    // display: flex;
-    // flex-wrap: wrap;
-    // justify-content: center;
 
     a {
         padding: .5rem .7rem;
@@ -283,18 +289,34 @@
 .site-main-show-tax {
 
     .projects {
-        // display: grid;
-        // justify-items: center;
-        // align-items: center;
-        // grid-auto-flow: column;
         display: flex;
         flex-wrap: wrap;
+        width: 95%;
+        margin: 0 auto;
+
+         @include tablet {
+            width: 80%;
+
+            }
+    
+            @include desktop {
+                width: 70%;
+            }
 
         article {
             display: flex;
             justify-content: center;
             align-items: center;
-            flex: 30%;
+            flex: 100%;
+
+            @include tablet {
+                flex: 49.99999%;
+
+            }
+    
+            @include desktop {
+                flex: 50%;
+            }
         }
 
     .entry-content {
@@ -306,6 +328,7 @@
         transition: 0.3s;
         border-radius: 5px;
         margin: 0 auto;
+        font-weight: 300;
         &:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
             color:#DD7D74;
@@ -317,7 +340,7 @@
           }
 
           @include tablet {
-            width: 49.99999%;
+            width: 350px;;
             margin: 1em;
         }
 
