--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -898,6 +898,12 @@ object {
   margin-bottom: 3em;
   width: 70%;
   text-align: center; }
+  @media screen and (min-width: 768px) {
+    .showcase-tax-header {
+      width: 60%; } }
+  @media screen and (min-width: 1080px) {
+    .showcase-tax-header {
+      width: 50%; } }
 
 .showcase-categories a {
   padding: .5rem .7rem;
@@ -941,7 +947,15 @@ object {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap; }
+      flex-wrap: wrap;
+  width: 95%;
+  margin: 0 auto; }
+  @media screen and (min-width: 768px) {
+    .site-main-show-tax .projects {
+      width: 80%; } }
+  @media screen and (min-width: 1080px) {
+    .site-main-show-tax .projects {
+      width: 70%; } }
   .site-main-show-tax .projects article {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -952,9 +966,19 @@ object {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-flex: 30%;
-        -ms-flex: 30%;
-            flex: 30%; }
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%; }
+    @media screen and (min-width: 768px) {
+      .site-main-show-tax .projects article {
+        -webkit-box-flex: 49.99999%;
+            -ms-flex: 49.99999%;
+                flex: 49.99999%; } }
+    @media screen and (min-width: 1080px) {
+      .site-main-show-tax .projects article {
+        -webkit-box-flex: 50%;
+            -ms-flex: 50%;
+                flex: 50%; } }
   .site-main-show-tax .projects .entry-content {
     width: 95%;
     display: -webkit-box;
@@ -972,7 +996,8 @@ object {
     -webkit-transition: 0.3s;
     transition: 0.3s;
     border-radius: 5px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    font-weight: 300; }
     .site-main-show-tax .projects .entry-content:hover {
       -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
               box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -982,7 +1007,7 @@ object {
       text-align: center; }
     @media screen and (min-width: 768px) {
       .site-main-show-tax .projects .entry-content {
-        width: 49.99999%;
+        width: 350px;
         margin: 1em; } }
     @media screen and (min-width: 1080px) {
       .site-main-show-tax .projects .entry-content {
